se organizan tags en swagger
